# wb-practice

./: README.md  pyproject.toml
Homework_1/: Mendgaliev_HW1.ipynb  README.md
Homework_2/: README.md  homework_2.ipynb
homework_3/: Python_HW3.ipynb
homework_ab/: Homework_AB_ANOVA.ipynb
individual_task/: README.md  comparison.md  conversion.sql  data_insertion.sql  datatable_creation.sql
